--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
       <section id="team" class="team section-padding">
         <header class="section-header">
           <h4>Who we are</h4>
-          <h2>Our proffesional team</h2>
+          <h2>Our professional team</h2>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci,
             tempora.
